Added ImageManipulation Module
use ResamplePixelBuffer(PixelBuffer* ,int , int)
to resample a valid PixelBuffer to the specified dimensions

TODO:
------
I have used again a macro : PACK_RGBA32
and macros GETA,GETR,GETG,GETB.
Place them in a separate file and configure them
to support big endian (with a definition in 3dengfxconfig.h)

--- a/src/common/Makefile-part
+++ b/src/common/Makefile-part
@@ -1,3 +1,3 @@
 obj += src/common/image.o src/common/image_png.o src/common/image_jpg.o src/common/image_tga.o \
 	src/common/logger.o src/common/config_parser.o src/common/timer.o src/common/fps_counter.o \
-	src/common/err_msg.o
+	src/common/err_msg.o src/common/ImageManipulation.o
