--- a/src/common/Makefile-part
+++ b/src/common/Makefile-part
@@ -1,2 +1,2 @@
-obj += src/common/logger.o src/common/config_parser.o src/common/timer.o \
+obj += src/common/config_parser.o src/common/timer.o \
 	src/common/fps_counter.o src/common/err_msg.o
