- added true type text rendering in the fxwt. - seperated the string hash function from the texture manager - fixed an obscure long standing bug in textures.cpp, the symptoms of which are   too obscure to explain right now, but involved a simple logic error in a   condition of GenUndefImage(). - other minor changes in the 3dengfx_config.c, the responsible code of setting   the verbosity to a higher level after init, etc.

--- a/src/common/Makefile-part
+++ b/src/common/Makefile-part
@@ -1,2 +1,2 @@
-obj += src/common/config_parser.o src/common/timer.o \
+obj += src/common/config_parser.o src/common/timer.o src/common/string_hash.o\
 	src/common/fps_counter.o src/common/err_msg.o src/common/locator.o
