--- a/examples/scene_view/Makefile
+++ b/examples/scene_view/Makefile
@@ -2,12 +2,10 @@ obj := scene_view.o events.o
 
 3dengfx_path := ../..
 
-CXXFLAGS := -g -ansi -pedantic -Wall -I$(3dengfx_path)/src `sdl-config --cflags`
-LIBS := -lGL -lGLU -lpng -ljpeg -l3ds
-#LIBS += -lCg -lCgGL
+CXXFLAGS := -g -ansi -pedantic -Wall -I$(3dengfx_path)/src `../../3dengfx-config --cflags`
 
 scene_view: $(obj) $(3dengfx_path)/lib3dengfx.a
-	$(CXX) -o $@ $(obj) $(3dengfx_path)/lib3dengfx.a `sdl-config --libs` $(LIBS)
+	$(CXX) -o $@ $(obj) $(3dengfx_path)/lib3dengfx.a `../../3dengfx-config --libs-no-3dengfx`
 
 .PHONY: clean
 clean:
