--- a/src/dsys/Makefile-part
+++ b/src/dsys/Makefile-part
@@ -1,1 +1,2 @@
-obj += src/dsys/dsys.o src/dsys/fx.o src/dsys/part.o src/dsys/script.o
+obj += src/dsys/dsys.o src/dsys/fx.o src/dsys/part.o src/dsys/scene_part.o \
+	src/dsys/script.o src/dsys/cmd.o
